# arima-from-scratch-in-python

./: README.md  pyproject.toml
app/: __main__.py
