[tool.poetry]
name = "arima-from-scratch-in-python"
version = "0.1.0"
description = "ARIMA model from scratch written in python"
authors = ["breno-jesus-fernandes <breno.de.jesus.fernandes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
fix = true
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-gettext
    "INT",
    # pylint
    "PL",
    # misc lints
    "PIE",
    # flake8-pyi
    "PYI",
    # tidy imports
    "TID",
    # implicit string concatenation
    "ISC",
    # type-checking imports
    "TCH",
    # comprehensions
    "C4",
    # pygrep-hooks
    "PGH",
    # Ruff-specific rules
    "RUF",
    # flake8-bandit: exec-builtin
    "S102",
    # numpy-legacy-random
    "NPY002",
    # Perflint
    "PERF",
    # flynt
    "FLY",
    # flake8-logging-format
    "G",
    "W"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
